argocd/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggersunity-web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: bloggersunity-webapp
        image: localhost:5000/bloggersunity-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: bloggersunity-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
