argocd/dev/bloggersunity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloggersunity-ingress
  namespace: bloggersunity-dev
spec:
  rules:
    - host: bloggersunity.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bloggersunity-service
                port:
                  number: 8000
